VQ-1469/New client details capture

--- a/src/app/features/lms/grp/components/policy/components/policy-listing/policy-listing.component.css
+++ b/src/app/features/lms/grp/components/policy/components/policy-listing/policy-listing.component.css
@@ -85,6 +85,10 @@ p-multiSelect {
       opacity: 70%;
       white-space: nowrap;
     }
+
+    .p-datatable .p-datatable-tbody>tr>td {
+      white-space: nowrap;
+  }
   
     .p-datatable-thead {
       border-radius: 4px 0px 0px 0px;
