--- a/src/app/features/lms/grp/components/policy/components/policy-summary/policy-summary.component.css
+++ b/src/app/features/lms/grp/components/policy/components/policy-summary/policy-summary.component.css
@@ -149,6 +149,10 @@ td {
     white-space: nowrap;
   }
 
+  .p-datatable .p-datatable-tbody>tr>td {
+    white-space: nowrap;
+}
+
   .p-datatable-thead {
     border-radius: 4px 0px 0px 0px;
     background: #BAD0E4;
