--- a/src/app/features/lms/grp/components/quotation/components/coverage-details/coverage-details.component.css
+++ b/src/app/features/lms/grp/components/quotation/components/coverage-details/coverage-details.component.css
@@ -234,6 +234,10 @@ input[type="number"]::-webkit-outer-spin-button {
     white-space: nowrap;
   }
 
+  .p-datatable .p-datatable-tbody>tr>td {
+    white-space: nowrap;
+}
+
   .p-datatable-thead {
     border-radius: 4px 0px 0px 0px;
     background: #BAD0E4;
