--- a/src/app/features/auth/login/login.component.html
+++ b/src/app/features/auth/login/login.component.html
@@ -49,7 +49,7 @@
         type="submit"
         id="login-submit"
         class="btn btn-primary btn-full-width fadeIn"
-        (click)='fetchUserTenants()'
+        (click)='authAttempt()'
         i18n='Login|Auth Login Action@@authLoginActionBtn'
       >
         
