tickets & risks cleanup

--- a/src/app/features/administration/components/tickets/ticket-details/ticket-details.component.html
+++ b/src/app/features/administration/components/tickets/ticket-details/ticket-details.component.html
@@ -147,7 +147,7 @@
     <div class="col-sm-7">
       <button
         class="btn btn-success authorize-btn"
-        (click)="callGenerateAuthorizeOtp()"
+        (click)="onClickAuthorize()"
         *ngIf="activeIndex === 2"
       >
         Authorize
