updated policies service file

--- a/src/app/features/administration/components/tickets/view-tickets/view-tickets.component.html
+++ b/src/app/features/administration/components/tickets/view-tickets/view-tickets.component.html
@@ -396,7 +396,7 @@
 
 <app-reassign-ticket-modal
   [reassignModalVisible]="showReassignTicketsModal"
-  [selectedTickets]="selectedTickets"
+  [selectedTickets]="selectedSpringTickets"
   (actionReassignEmitter)="handleAction($event)"
   (reassignedTickets)="reassignSubmitted($event)">
 </app-reassign-ticket-modal>
